2008-11-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdavalue.c (rb_gda_value_to_rb_value): fix format string.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2007-12-31  Carlo E. Prelz  <fluido@fluido.as>

	* src/rbgdavalue.c (rb_rb_value_to_gda_value): used RSTRING_PTR()
	and RSTRING_LEN().

2007-07-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*: use rb_block_proc() directly instead of using G_BLOCK_PROC().

2005-12-05  Laurent Sansonetti  <lrz@gnome.org>

	* README, extconf.rb, src/rbgda.c, src/rbgda.h, src/rbgdaclient.c,
	  src/rbgdaconnection.c, src/rbgdadatamodel.c, src/rbgdadatamodelhash.c,
 	  src/rbgdaerror.c, src/rbgdafieldattributes.c, src/rbgdavalue.c:
	Fix build against 1.3.x branch (libgda-2.x).

2005-10-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: : Cygwin support. [bug #1315334]
	By Yaakov Selkowitz.

2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/rbgda.h, rbgda.c: Added Gda::BUILD_VERSION.

2005-03-02  Laurent Sansonetti  <lrz@gnome.org>

	* README: we support 1.1.99.
	* src/rbgdadatamodel.c (#emit_column_inserted, #emit_column_updated,
	  #emit_column_removed, #get_value_at, #append_column, #update_column,
	  #remove_column): Added.
	* src/rbgdadatamodel.c (#editable?, #editing?, #begin_edit, #cancel_edit,
	  #end_edit): Renamed.
	* src/rbgdaprovider.c (::model): Enabled again.
	* src/rbgdaquarklist.c (#clear): Enabled again.
	* tests/tc_all.rb: Re-test previously disabled methods.
	* src/rbgdaconnection.c (#reset!, #clear_errors, #create_table,
	  #drop_table): Added.
	* extconf.rb: Detect 1.1, 1.2 and 1.3 versions, to keep backward
	  compatibility.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2004-04-19  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgdaexport.c: Removed.
	* src/rbgda.c: Removed call to Init_gda_export.
	* src/rbgdacommand.c: Fixed a compilation bug with GCC 2.9.XX,
	  reported by mezz7.